--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   </head>
 
   <body>
-    <div id="app"></div>
-    <p>tTest</p>
+    <div id="app"><ｓｇｒせｇ
+    <p>tTesｓｇｒせｇt</p>
     <script src="src/index.js"></script>
   </body>
 </html>
